# kata-rust

./: Cargo.toml  README.md
src/: main.rs
tdd/banjo/: main.rs
tdd/bmi/: main.rs
tdd/digitize/: main.rs
tdd/make_negative/: main.rs
tdd/minimum/: main.rs
tdd/nb_year/: main.rs
tdd/number_to_string/: main.rs
tdd/points/: main.rs
tdd/remove_exclamation_marks/: main.rs
tdd/remove_string_space/: main.rs
tdd/rps/: main.rs
tdd/set_alarm/: main.rs
tdd/simple_multiplication/: main.rs
tdd/string_to_array/: main.rs
tdd/string_to_int/: main.rs
